--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "app_id" : "net.moodle.learn",
+    "app_id" : "com.caas.student",
     "versioncode" : "3",
     "versionname" : "1.1",
     "cache_expiration_time" : 300000,
